fix: update checkbox styles to use important modifiers for better specificity in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
 
 @layer utilities {
   input[type="checkbox"]:not(:checked) {
-    @apply dark:bg-[#132531];
+    @apply dark:!bg-[#132531];
   }
 
   .pxt-row {
